[gd_scene load_steps=2 format=2]

[ext_resource path="res://OptionsMenu.gd" type="Script" id=1]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Audio and Video" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CenterContainer" type="CenterContainer" parent="TabContainer/Audio and Video"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -26.0
margin_bottom = 26.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio and Video/CenterContainer"]
margin_left = 65.0
margin_right = 162.0
margin_bottom = 52.0

[node name="Fullscreen" type="CheckBox" parent="TabContainer/Audio and Video/CenterContainer/VBoxContainer"]
margin_right = 97.0
margin_bottom = 24.0
text = "Fullscreen"

[node name="Borderless" type="CheckBox" parent="TabContainer/Audio and Video/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 97.0
margin_bottom = 52.0
text = "Borderless"

[node name="Keybindings" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Keybindings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Controls" type="VBoxContainer" parent="TabContainer/Keybindings/ScrollContainer"]
margin_right = 210.0
margin_bottom = 216.0

[node name="PlayerSelect" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_right = 210.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/PlayerSelect"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Player"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Keybindings/ScrollContainer/Controls/PlayerSelect"]
margin_left = 43.0
margin_right = 80.0
margin_bottom = 24.0
text = "1"
items = [ "1", null, false, 0, null, "2", null, false, 1, null, "3", null, false, 2, null, "4", null, false, 3, null, "5", null, false, 4, null ]
selected = 0

[node name="ControllerCheck" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls/PlayerSelect"]
margin_left = 84.0
margin_right = 210.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/PlayerSelect/ControllerCheck"]
margin_top = 5.0
margin_right = 98.0
margin_bottom = 19.0
text = "Use Controller?"
align = 2

[node name="CheckBox" type="CheckBox" parent="TabContainer/Keybindings/ScrollContainer/Controls/PlayerSelect/ControllerCheck"]
margin_left = 102.0
margin_right = 126.0
margin_bottom = 24.0

[node name="HBoxCont_move_right_" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_top = 28.0
margin_right = 210.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_move_right_"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 17.0
text = "Move right"

[node name="Button" type="Button" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_move_right_"]
margin_left = 72.0
margin_right = 84.0
margin_bottom = 20.0

[node name="HBoxCont_move_left_" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_top = 52.0
margin_right = 210.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_move_left_"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 17.0
text = "Move left"

[node name="Button" type="Button" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_move_left_"]
margin_left = 64.0
margin_right = 76.0
margin_bottom = 20.0

[node name="HBoxCont_jump_" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_top = 76.0
margin_right = 210.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_jump_"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 17.0
text = "Jump"

[node name="Button" type="Button" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_jump_"]
margin_left = 36.0
margin_right = 48.0
margin_bottom = 20.0

[node name="HBoxCont_cast_" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_top = 100.0
margin_right = 210.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_cast_"]
margin_top = 3.0
margin_right = 27.0
margin_bottom = 17.0
text = "Cast"

[node name="Button" type="Button" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_cast_"]
margin_left = 31.0
margin_right = 43.0
margin_bottom = 20.0

[node name="HBoxCont_aim_up_" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_top = 124.0
margin_right = 210.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_up_"]
margin_top = 3.0
margin_right = 48.0
margin_bottom = 17.0
text = "Aim Up"

[node name="Button" type="Button" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_up_"]
margin_left = 52.0
margin_right = 64.0
margin_bottom = 20.0

[node name="HBoxCont_aim_down_" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_top = 148.0
margin_right = 210.0
margin_bottom = 168.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_down_"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 17.0
text = "Aim Down"

[node name="Button" type="Button" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_down_"]
margin_left = 70.0
margin_right = 82.0
margin_bottom = 20.0

[node name="HBoxCont_aim_left_" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_top = 172.0
margin_right = 210.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_left_"]
margin_top = 3.0
margin_right = 54.0
margin_bottom = 17.0
text = "Aim Left"

[node name="Button" type="Button" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_left_"]
margin_left = 58.0
margin_right = 70.0
margin_bottom = 20.0

[node name="HBoxCont_aim_right_" type="HBoxContainer" parent="TabContainer/Keybindings/ScrollContainer/Controls"]
margin_top = 196.0
margin_right = 210.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_right_"]
margin_top = 3.0
margin_right = 62.0
margin_bottom = 17.0
text = "Aim Right"

[node name="Button" type="Button" parent="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_right_"]
margin_left = 66.0
margin_right = 78.0
margin_bottom = 20.0

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 42.0
text = "Back"

[connection signal="toggled" from="TabContainer/Audio and Video/CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_FullscreenCheckBox_toggled"]
[connection signal="toggled" from="TabContainer/Audio and Video/CenterContainer/VBoxContainer/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="item_selected" from="TabContainer/Keybindings/ScrollContainer/Controls/PlayerSelect/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="TabContainer/Keybindings/ScrollContainer/Controls/PlayerSelect/ControllerCheck/CheckBox" to="." method="_on_ControllerCheckBox_toggled"]
[connection signal="pressed" from="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_move_right_/Button" to="." method="_on_change_key_move_right"]
[connection signal="pressed" from="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_move_left_/Button" to="." method="_on_change_key_move_left"]
[connection signal="pressed" from="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_jump_/Button" to="." method="_on_change_key_jump"]
[connection signal="pressed" from="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_cast_/Button" to="." method="_on_change_key_cast"]
[connection signal="pressed" from="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_up_/Button" to="." method="_on_change_key_aim_up"]
[connection signal="pressed" from="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_down_/Button" to="." method="_on_change_key_aim_down"]
[connection signal="pressed" from="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_left_/Button" to="." method="_on_change_key_aim_left"]
[connection signal="pressed" from="TabContainer/Keybindings/ScrollContainer/Controls/HBoxCont_aim_right_/Button" to="." method="_on_change_key_aim_right"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
